include/expanse.h

/* ---- expanse_bytesmap_t: unordered bytes -> uint64_t (cf. JudyHS) --- */

typedef struct expanse_bytesmap expanse_bytesmap_t;
bool     expanse_bytesmap_remove(expanse_bytesmap_t *map, const void *key, size_t len,
                                 uint64_t *old_out);
uint64_t *expanse_bytesmap_slot(const expanse_bytesmap_t *map, const void *key, size_t len);
uint64_t *expanse_bytesmap_ins_slot(expanse_bytesmap_t *map, const void *key, size_t len);
uint64_t expanse_bytesmap_len(const expanse_bytesmap_t *map);
size_t   expanse_bytesmap_mem_used(const expanse_bytesmap_t *map);
void     expanse_bytesmap_clear(expanse_bytesmap_t *map);
/* ---- expanse_strmap_t: ordered C-string -> uint64_t map (cf. JudySL) - */

typedef struct expanse_strmap expanse_strmap_t;
expanse_strmap_t *expanse_strmap_new(void);
void              expanse_strmap_free(expanse_strmap_t *map);
bool     expanse_strmap_insert(expanse_strmap_t *map, const char *key, uint64_t value,
                               uint64_t *old_out) EXPANSE_NONNULL(1);
bool     expanse_strmap_get(const expanse_strmap_t *map, const char *key, uint64_t *value_out);
bool     expanse_strmap_remove(expanse_strmap_t *map, const char *key, uint64_t *old_out);
uint64_t *expanse_strmap_slot(const expanse_strmap_t *map, const char *key);
uint64_t *expanse_strmap_ins_slot(expanse_strmap_t *map, const char *key);
uint64_t expanse_strmap_len(const expanse_strmap_t *map);
size_t   expanse_strmap_mem_used(const expanse_strmap_t *map);
void     expanse_strmap_clear(expanse_strmap_t *map);
/*
 * Ordered string navigation. The found key (NUL-terminated) is written to
 * `key_out` (up to `buf_len` bytes including NUL). Returns false if no key
 * is found or if `buf_len` is insufficient.
 */
EXPANSE_DEPRECATED("use expanse_strmap_first_ex to distinguish truncation from absent key")
bool expanse_strmap_first(const expanse_strmap_t *map, char *key_out, size_t buf_len,
                          uint64_t *value_out);
EXPANSE_DEPRECATED("use expanse_strmap_last_ex to distinguish truncation from absent key")
bool expanse_strmap_last(const expanse_strmap_t *map, char *key_out, size_t buf_len,
                         uint64_t *value_out);
EXPANSE_DEPRECATED("use expanse_strmap_next_at_or_after_ex to distinguish truncation from absent key")
bool expanse_strmap_next_at_or_after(const expanse_strmap_t *map, const char *key,
                                     char *key_out, size_t buf_len, uint64_t *value_out);
EXPANSE_DEPRECATED("use expanse_strmap_next_after_ex to distinguish truncation from absent key")
bool expanse_strmap_next_after(const expanse_strmap_t *map, const char *key,
                               char *key_out, size_t buf_len, uint64_t *value_out);
EXPANSE_DEPRECATED("use expanse_strmap_prev_at_or_before_ex to distinguish truncation from absent key")
bool expanse_strmap_prev_at_or_before(const expanse_strmap_t *map, const char *key,
                                      char *key_out, size_t buf_len, uint64_t *value_out);
EXPANSE_DEPRECATED("use expanse_strmap_prev_before_ex to distinguish truncation from absent key")
bool expanse_strmap_prev_before(const expanse_strmap_t *map, const char *key,
                                char *key_out, size_t buf_len, uint64_t *value_out);
/*
 * Truncation-aware string navigation (the `_ex` variants).
 *
 * The plain expanse_strmap_first/last/next/prev above return `false` for BOTH
 * "no such key" and "key found but buf_len too small", so a caller cannot tell
 * a missing key from a truncated one and may silently drop long keys. These
 * variants disambiguate via an explicit status and report the needed buffer
 * size through `required_len`. The original symbols are unchanged.
 *
 * On EXPANSE_STR_NAV_OK the NUL-terminated key is written to `key_out`, the
 * value to `*value_out` (if non-NULL), and `*required_len` (if non-NULL) is set
 * to the byte length needed (key length + 1 for the NUL). On
 * EXPANSE_STR_NAV_BUFFER_TOO_SMALL nothing is written to `key_out` but
 * `*required_len` (if non-NULL) is set so the caller can retry with a big
 * enough buffer. On EXPANSE_STR_NAV_NOT_FOUND no key matched and nothing is
 * written.
 */
typedef enum {
    EXPANSE_STR_NAV_OK = 0,
    EXPANSE_STR_NAV_NOT_FOUND = 1,
    EXPANSE_STR_NAV_BUFFER_TOO_SMALL = 2
} expanse_str_nav_status;
expanse_str_nav_status expanse_strmap_first_ex(const expanse_strmap_t *map,
                                               char *key_out, size_t buf_len,
                                               size_t *required_len, uint64_t *value_out);
expanse_str_nav_status expanse_strmap_last_ex(const expanse_strmap_t *map,
                                              char *key_out, size_t buf_len,
                                              size_t *required_len, uint64_t *value_out);
expanse_str_nav_status expanse_strmap_next_at_or_after_ex(const expanse_strmap_t *map, const char *key,
                                                          char *key_out, size_t buf_len,
                                                          size_t *required_len, uint64_t *value_out);
expanse_str_nav_status expanse_strmap_next_after_ex(const expanse_strmap_t *map, const char *key,
                                                    char *key_out, size_t buf_len,
                                                    size_t *required_len, uint64_t *value_out);
expanse_str_nav_status expanse_strmap_prev_at_or_before_ex(const expanse_strmap_t *map, const char *key,
                                                           char *key_out, size_t buf_len,
                                                           size_t *required_len, uint64_t *value_out);
expanse_str_nav_status expanse_strmap_prev_before_ex(const expanse_strmap_t *map, const char *key,
                                                     char *key_out, size_t buf_len,
                                                     size_t *required_len, uint64_t *value_out);
/* ---- Concurrent types: one writer, optimistic readers ---------------- */

/*
 * The capability classic Judy has no answer for. Writers serialize
 * internally; readers run an optimistic validated walk with epoch-based
 * reclamation, so a reader never dereferences freed memory and, on the
 * common path, takes no lock and does not block a writer. The protocol is
 * blocking optimistic lock coupling, not lock-free: a read that exhausts its
 * bounded retries falls back to the writer-excluding path (it quiesces
 * writers and takes the writer mutex), and writers wait for that read to
 * finish (docs/ARCHITECTURE.md §4, docs/BENCHMARKING.md for scaling).
 *
 * A container handle is safe to use from any number of threads at once.
 * Readers SHOULD take a reader handle (expanse_sync_*_reader_new) once per
 * thread and reuse it: the one-shot _contains/_get calls register and
 * drop a reader on every call.
 *
 * Reader-handle ownership:
 *  - One handle per reading thread. A handle owns a single epoch slot and
 *    its pins are not reentrant, so calls on ONE handle from two threads at
 *    once are undefined; give each reading thread its own.
 *  - A handle may be passed to, and freed (_reader_free) from, a thread
 *    other than the one that created it, once no call on it is in progress:
 *    every call releases its epoch pin before returning, and freeing
 *    deregisters the handle through the container's registry lock, reading
 *    no thread-local state.
 *  - Freeing a handle while another thread is inside a call on it is
 *    undefined. Freeing it after its parent container is undefined: free
 *    every reader handle before the container.
 */

typedef struct expanse_sync_set expanse_sync_set_t;
expanse_sync_set_t *expanse_sync_set_new(void);
void                expanse_sync_set_free(expanse_sync_set_t *set);
bool                expanse_sync_set_insert(expanse_sync_set_t *set, uint64_t key);
/* ---- ExpanseBlobMap: polymorphic large-value map with inline/arena backing ---- */

typedef struct ExpanseBlobMap ExpanseBlobMap;
/*
 * A zero-copy view of a stored payload.
 *
 * INVALIDATION CONTRACT (same spirit as the JudyL value-slot contract):
 * `ptr` borrows directly into the map's inline slot memory or arena slab and
 * stays valid ONLY until the next structural mutation of that map. For
 * compressed inline payloads, `ptr` is NULL and callers use
 * `expanse_blob_map_get_into` to decompress into a destination buffer. Any
 * expanse_blob_map_insert / _remove / _clear / _compact / _free invalidates
 * every previously returned ExpanseBlobView.ptr — reading through it afterwards
 * is undefined behavior. Copy the bytes out before mutating if you need them to
 * outlive the next mutation. Views delivered to a scan callback are valid only
 * for the duration of that callback invocation.
 */
typedef struct {
    const uint8_t *ptr;
    size_t         len;
    uint32_t       hot_meta;
    bool           is_inline;
} ExpanseBlobView;
/*
 * Scan callbacks. Both must return normally: throwing a C++ exception through
 * one, or `longjmp`-ing out of it, unwinds through Rust frames mid traversal,
 * runs no destructor, and leaves the map in a state that satisfies none of its
 * invariants, with no diagnostic. Undefined behaviour, undetectable by the
 * library; catch inside the callback. A Rust panic in a callback aborts the
 * process instead of unwinding, which is the defined outcome.
 */
typedef bool (*expanse_predicate_fn)(uint64_t key, uint32_t hot_meta, void *user_ctx);
typedef bool (*expanse_scan_cb_fn)(uint64_t key, ExpanseBlobView view, void *user_ctx);
ExpanseBlobMap *expanse_blob_map_new(size_t chunk_size);
void            expanse_blob_map_free(ExpanseBlobMap *map);
bool expanse_blob_map_insert(
    ExpanseBlobMap *map,
    uint64_t key,
    const uint8_t *data,
    size_t len,
    uint32_t hot_meta
);
bool expanse_blob_map_remove(ExpanseBlobMap *map, uint64_t key);
bool expanse_blob_map_get(
    const ExpanseBlobMap *map,
    uint64_t key,
    ExpanseBlobView *out_view
);
size_t expanse_blob_map_scan_filtered(
    const ExpanseBlobMap *map,
    uint64_t start_key,
    uint64_t end_key,
    expanse_predicate_fn predicate,
    expanse_scan_cb_fn callback,
    void *user_ctx
);
bool     expanse_blob_map_compact(ExpanseBlobMap *map);
uint64_t expanse_blob_map_len(const ExpanseBlobMap *map);
size_t   expanse_blob_map_mem_used(const ExpanseBlobMap *map);
void     expanse_blob_map_clear(ExpanseBlobMap *map);
bool     expanse_blob_map_contains_key(const ExpanseBlobMap *map, uint64_t key);