bindings/dotnet/src/Expanse.NET/Native/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_bytesmap_remove(SafeExpanseBytesMapHandle map, byte* key, nuint len, IntPtr old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_slot")]
    public static extern unsafe ulong* expanse_bytesmap_slot(SafeExpanseBytesMapHandle map, byte* key, nuint len);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_ins_slot")]
    public static extern unsafe ulong* expanse_bytesmap_ins_slot(SafeExpanseBytesMapHandle map, byte* key, nuint len);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_len")]
    public static extern ulong expanse_bytesmap_len(SafeExpanseBytesMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_mem_used")]
    public static extern nuint expanse_bytesmap_mem_used(SafeExpanseBytesMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_bytesmap_clear")]
    public static extern void expanse_bytesmap_clear(SafeExpanseBytesMapHandle map);

    #endregion

    #region ExpanseStrMap

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_new")]
    public static extern SafeExpanseStrMapHandle expanse_strmap_new();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_free")]
    public static extern void expanse_strmap_free(IntPtr map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_insert(SafeExpanseStrMapHandle map, byte* key, ulong value, out ulong old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_insert(SafeExpanseStrMapHandle map, byte* key, ulong value, IntPtr old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_get")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_get(SafeExpanseStrMapHandle map, byte* key, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_remove(SafeExpanseStrMapHandle map, byte* key, out ulong old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_remove(SafeExpanseStrMapHandle map, byte* key, IntPtr old_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_slot")]
    public static extern unsafe ulong* expanse_strmap_slot(SafeExpanseStrMapHandle map, byte* key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_ins_slot")]
    public static extern unsafe ulong* expanse_strmap_ins_slot(SafeExpanseStrMapHandle map, byte* key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_len")]
    public static extern ulong expanse_strmap_len(SafeExpanseStrMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_mem_used")]
    public static extern nuint expanse_strmap_mem_used(SafeExpanseStrMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_clear")]
    public static extern void expanse_strmap_clear(SafeExpanseStrMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_first")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_first(SafeExpanseStrMapHandle map, byte* key_out, nuint buf_len, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_last")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_last(SafeExpanseStrMapHandle map, byte* key_out, nuint buf_len, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_next_at_or_after")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_next_at_or_after(SafeExpanseStrMapHandle map, byte* key, byte* key_out, nuint buf_len, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_next_after")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_next_after(SafeExpanseStrMapHandle map, byte* key, byte* key_out, nuint buf_len, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_prev_at_or_before")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_prev_at_or_before(SafeExpanseStrMapHandle map, byte* key, byte* key_out, nuint buf_len, out ulong value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_prev_before")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_strmap_prev_before(SafeExpanseStrMapHandle map, byte* key, byte* key_out, nuint buf_len, out ulong value_out);

    // Truncation-aware navigation (_ex): return an int status
    // (0 = OK, 1 = NOT_FOUND, 2 = BUFFER_TOO_SMALL) and report the needed
    // buffer size through required_len.
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_first_ex")]
    public static extern unsafe int expanse_strmap_first_ex(SafeExpanseStrMapHandle map, byte* key_out, nuint buf_len, nuint* required_len, ulong* value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_last_ex")]
    public static extern unsafe int expanse_strmap_last_ex(SafeExpanseStrMapHandle map, byte* key_out, nuint buf_len, nuint* required_len, ulong* value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_next_at_or_after_ex")]
    public static extern unsafe int expanse_strmap_next_at_or_after_ex(SafeExpanseStrMapHandle map, byte* key, byte* key_out, nuint buf_len, nuint* required_len, ulong* value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_next_after_ex")]
    public static extern unsafe int expanse_strmap_next_after_ex(SafeExpanseStrMapHandle map, byte* key, byte* key_out, nuint buf_len, nuint* required_len, ulong* value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_prev_at_or_before_ex")]
    public static extern unsafe int expanse_strmap_prev_at_or_before_ex(SafeExpanseStrMapHandle map, byte* key, byte* key_out, nuint buf_len, nuint* required_len, ulong* value_out);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_strmap_prev_before_ex")]
    public static extern unsafe int expanse_strmap_prev_before_ex(SafeExpanseStrMapHandle map, byte* key, byte* key_out, nuint buf_len, nuint* required_len, ulong* value_out);

    #endregion

    #region ExpanseBlobMap

    [StructLayout(LayoutKind.Sequential)]
    public struct NativeBlobView
    {
        public IntPtr Ptr;
        public nuint Len;
        public uint HotMeta;
        [MarshalAs(UnmanagedType.I1)]
        public bool IsInline;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public delegate bool ExpansePredicateCallback(ulong key, uint hotMeta, IntPtr userCtx);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public delegate bool ExpanseScanCallback(ulong key, NativeBlobView view, IntPtr userCtx);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_new")]
    public static extern SafeExpanseBlobMapHandle expanse_blob_map_new(nuint chunkSize);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_free")]
    public static extern void expanse_blob_map_free(IntPtr map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern unsafe bool expanse_blob_map_insert(SafeExpanseBlobMapHandle map, ulong key, byte* data, nuint len, uint hotMeta);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_remove")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_blob_map_remove(SafeExpanseBlobMapHandle map, ulong key);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_get")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_blob_map_get(SafeExpanseBlobMapHandle map, ulong key, out NativeBlobView outView);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_scan_filtered")]
    public static extern nuint expanse_blob_map_scan_filtered(
        SafeExpanseBlobMapHandle map,
        ulong startKey,
        ulong endKey,
        ExpansePredicateCallback? predicate,
        ExpanseScanCallback? callback,
        IntPtr userCtx);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_compact")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_blob_map_compact(SafeExpanseBlobMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_len")]
    public static extern ulong expanse_blob_map_len(SafeExpanseBlobMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_mem_used")]
    public static extern nuint expanse_blob_map_mem_used(SafeExpanseBlobMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_clear")]
    public static extern void expanse_blob_map_clear(SafeExpanseBlobMapHandle map);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_blob_map_contains_key")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_blob_map_contains_key(SafeExpanseBlobMapHandle map, ulong key);

    #endregion

    #region Concurrent (Sync) Types

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_new")]
    public static extern SafeExpanseSyncSetHandle expanse_sync_set_new();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_free")]
    public static extern void expanse_sync_set_free(IntPtr set);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "expanse_sync_set_insert")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool expanse_sync_set_insert(SafeExpanseSyncSetHandle set, ulong key);
